# Rodnix

./: .editorconfig  .gitattributes  .gitignore  64BIT_MIGRATION.md  ARCHITECTURE.md  CLA.md  CLA_NOTICE.md  CONTRIBUTING.md  ENTERPRISE_LICENSE.md  FOUNDATION_CHARTER.md  GOVERNANCE.md  INSTALL.md  LICENSE  Makefile  ODE_OF_CONDUCT.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  grub.cfg  link.ld
.gigaide/: gigaide.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
boot/: Makefile  README.md  boot.S  gdt_flush.S  idt_load.S  isr_stubs.S  limine.cfg
docs/: BUILD.md  PLAN.md  README.md  XNU_ANALYSIS.md  XNU_INSPIRATION.md
drivers/: Makefile  ata_driver.c  console.c  ports.c
include/: README.md  abi.h  ata.h  capability.h  common.h  console.h  debug.h  device.h  driver.h  error.h  gdt.h  heap.h  idt.h  ipc.h  irq.h  isr.h  kernel.h  keyboard.h  kmod_abi.h  memory.h  paging.h  pci.h  pic.h  pit.h  pmm.h  ports.h  scheduler.h  shell.h  types.h  utsname.h  version.h  vfs.h  vmm.h
kernel/: Makefile  README.md  ata.c  capability.c  debug.c  device.c  driver.c  gdt.c  heap.c  idt.c  ipc.c  irq.c  isr.c  keyboard.c  main.c  memory.c  paging.c  paging_debug.c  pci.c  pic.c  pit.c  pmm.c  scheduler.c  shell.c  vfs.c  vmm.c
osfmk/: README.md
scripts/: check-deps.sh  check_bsd_abi_headers.py  check_parallel_subsystems.sh  mkext2_demo.py  mkinitrd.py  mkkmod.py  mkposixsyscalls.py  sync_bsd_abi_headers.py
userland/: Makefile  README.md  crt0.S  link.ld
userspace/drivers/: Cargo.toml
userspace/drivers/src/: lib.rs
(+404 files in other folders)
